--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 <body>
+    <h1>Enter The Password</h1>
     <form action="/submit" method="post" >
         <label for="password">Password</label>
         <input type="password" name="password">
